--- a/SherpaDesk/WorkList.xaml
+++ b/SherpaDesk/WorkList.xaml
@@ -10,8 +10,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:telerik="using:Telerik.UI.Xaml.Controls.Grid" 
-    xmlns:telerikPrimitives="using:Telerik.UI.Xaml.Controls.Primitives"
     xmlns:gridPrimitives="using:Telerik.UI.Xaml.Controls.Grid.Primitives"    
+    xmlns:primitivesCommon="using:Telerik.UI.Xaml.Controls.Primitives.Common"
+    xmlns:telerikPrimitives="using:Telerik.UI.Xaml.Controls.Primitives"
     xmlns:telerikPagination="using:Telerik.UI.Xaml.Controls.Primitives.Pagination"    
     mc:Ignorable="d" Loaded="pageRoot_Loaded" Margin="0,-1,0,1">
 
@@ -43,6 +44,48 @@
             <Setter Property="Visibility" Value="Collapsed" />
         </Style>
 
+        <Style TargetType="gridPrimitives:DataGridLoadDataControl">
+            <Setter Property="Background" Value="{ThemeResource TelerikGridSelectedBackgroundBrush}"/>
+            <Setter Property="Margin" Value="0,10,0,0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="gridPrimitives:DataGridLoadDataControl">
+                        <Grid HorizontalAlignment="Stretch" Background="#EBEBEB">
+                            <primitivesCommon:InlineButton x:Name="PART_LoadButton" HorizontalAlignment="Right">
+                                <primitivesCommon:InlineButton.Content>
+                                    <StackPanel HorizontalAlignment="Right">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition />
+                                                <ColumnDefinition />
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Text="Load 25 More" Margin="30,0,0,0" VerticalAlignment="Center" Foreground="#86abb6" FontSize="20" />
+                                            <Image Grid.Column="2" Source="Assets/pageNext.png" Margin="10,0,30,0" />
+                                        </Grid>                                        
+                                    </StackPanel>
+                                </primitivesCommon:InlineButton.Content>
+                                <primitivesCommon:InlineButton.Style>
+                                    <Style TargetType="primitivesCommon:InlineButton">
+
+                                        <Setter Property="Background" Value="#EBEBEB"/>
+                                        <Setter Property="BorderThickness" Value="0 0 0 0"/>
+                                        <Setter Property="HorizontalAlignment" Value="Left"/>
+                                        <Setter Property="VerticalAlignment" Value="Stretch"/>
+                                        <Setter Property="FontFamily" Value="{StaticResource ContentControlThemeFontFamily}"/>
+                                        <Setter Property="FontSize" Value="{StaticResource ControlContentThemeFontSize}"/>
+                                        <Setter Property="Height" Value="50"/>
+                                        <Setter Property="Margin" Value="0 0 0 0"/>
+                                        <Setter Property="Padding" Value="0 0 0 0"/>
+                                        <Setter Property="PointerOverBackgroundBrush" Value="#EBEBEB"/>
+                                        <Setter Property="PressedBackgroundBrush" Value="#f4f4f4"/>
+                                    </Style>
+                                </primitivesCommon:InlineButton.Style>
+                            </primitivesCommon:InlineButton>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
     <Page.DataContext>
         <local:WorkListPageViewModel/>
