--- a/SherpaDesk/WorkList.xaml
+++ b/SherpaDesk/WorkList.xaml
@@ -111,6 +111,7 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <TextBlock x:Name="pageTitle"                   
                    Margin="20,30,20,20" 
@@ -158,7 +159,7 @@
                     </StackPanel>
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
-            <telerikPrimitives:RadCustomHubTile x:Name="FollowUpDatesButton" Grid.Row="4" HorizontalAlignment="Center" Margin="0,0,0,0" Height="120" VerticalAlignment="Top" Width="230" Background="#96c8dd" Tapped="FollowUpDatesButton_Tapped">
+            <telerikPrimitives:RadCustomHubTile x:Name="FollowUpDatesButton" Grid.Row="4" HorizontalAlignment="Center" Margin="0,0,0,20" Height="120" VerticalAlignment="Top" Width="230" Background="#96c8dd" Tapped="FollowUpDatesButton_Tapped">
                 <telerikPrimitives:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
                         <Grid>
@@ -168,6 +169,20 @@
                             </Grid.RowDefinitions>
                             <TextBlock x:Name="FollowUpDatesCount" Text="" HorizontalAlignment="Center" Margin="0,0,0,0" FontSize="82.667" FontWeight="SemiLight"/>
                             <TextBlock Text="Follow Up Dates" FontSize="20" Grid.Row="1" HorizontalAlignment="Right" Margin="0,10,10,5"/>
+                        </Grid>
+                    </StackPanel>
+                </telerikPrimitives:RadCustomHubTile.FrontContent>
+            </telerikPrimitives:RadCustomHubTile>
+            <telerikPrimitives:RadCustomHubTile x:Name="UnconfirmedButton" Grid.Row="5" HorizontalAlignment="Center" Margin="0,0,0,0" Height="120" VerticalAlignment="Top" Width="230" Background="#96c8dd" Tapped="FollowUpDatesButton_Tapped">
+                <telerikPrimitives:RadCustomHubTile.FrontContent>
+                    <StackPanel Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="80" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <TextBlock x:Name="UnconfirmedCount" Text="" HorizontalAlignment="Center" Margin="0,0,0,0" FontSize="82.667" FontWeight="SemiLight"/>
+                            <TextBlock Text="Unconfirmed" FontSize="20" Grid.Row="1" HorizontalAlignment="Right" Margin="0,10,10,5"/>
                         </Grid>
                     </StackPanel>
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
